# cc-teams-mcp

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/claude_teams/: messaging.py  models.py  server.py  spawner.py  tasks.py
src/claude_teams/claude_side/: injector.py  registry.py  server.py  spawner.py  watcher.py
src/claude_teams/common/: _paths.py  _serialization.py  messaging.py  models.py  tasks.py  teams.py
src/claude_teams/external_side/: server.py
tests/: test_claude_side_server.py  test_external_side_server.py  test_injector.py  test_messaging.py  test_models.py  test_registry.py  test_server.py  test_spawner.py  test_tasks.py  test_teams.py  test_watcher.py
