[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cc-teams-mcp"
version = "0.1.1"
description = "MCP server for orchestrating Claude Code/ Codex agent teams"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "fastmcp==3.0.0b1",
    "filelock==3.16",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "ruff==0.14.0",
    "pre-commit>=4.5.1",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
claude-teams = "claude_teams.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_teams"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"



[tool.pyright]
include = ["src"]
typeCheckingMode = "basic"
useLibraryCodeForTypes = false

[tool.ruff]
line-length = 120
src = ["src"]
# Ruff will automatically exclude all files listed in .gitignore as well as common temporary Python
# tool directories.
# To exclude additional folders, use extend-exclude.
extend-exclude = []

[tool.ruff.lint]
select = [
    "F", # pyflakes
    "E", # pycodestyle
    "I", # isort
    "N", # pep8-naming
    "UP", # pyupgrade
    "RUF", # ruff
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "C90", # mccabe (function complexity)
    "ISC", # flake8-implicit-str-concat
    "PIE", # flake8-pie
    "PT", # flake-pytest-style
    "PTH", # flake8-use-pathlib
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
]
extend-ignore = [
    "RUF005",
    "RUF012",
    "N813",    # Camelcase ... imported as lowercase ...
    "TID252",  # Prefer absolute imports over relative imports
    "RUF001",
    "RUF002",
    "RUF003",
]
unfixable = [
    # Disable removing unused imports by default so editors don't delete
    # unused imports while the user is in the middle of editing a file on save.
    "F401",
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
split-on-trailing-comma = false
# For non-src directory projects, explicitly set top level package names:
# known-first-party = ["my-app"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["typer.Argument"]

